--- a/File.Manager/File.Manager/App.xaml
+++ b/File.Manager/File.Manager/App.xaml
@@ -2,19 +2,14 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:File.Manager" 
-             xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              StartupUri="Windows\MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ui:ThemesDictionary Theme="Light" />
-                <ui:ControlsDictionary />
+                <ResourceDictionary Source="pack://application:,,,/Fluent;Component/Themes/Generic.xaml" />
+                <ResourceDictionary Source="Theme\Win11Theme.xaml" />
+                <ResourceDictionary Source="Theme\Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
-
-            <Style x:Key="DialogButton" TargetType="Button">
-                <Setter Property="Margin" Value="4" />
-                <Setter Property="MinWidth" Value="150" />
-            </Style>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
