--- a/File.Manager/File.Manager/Controls/Pane.xaml
+++ b/File.Manager/File.Manager/Controls/Pane.xaml
@@ -4,10 +4,16 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:vm="clr-namespace:File.Manager.BusinessLogic.ViewModels.Pane;assembly=File.Manager.BusinessLogic"
-             xmlns:local="clr-namespace:File.Manager.Controls"
+             xmlns:local="clr-namespace:File.Manager.Controls" d:DataContext="{d:DesignInstance Type=vm:PaneViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <ListBox ItemsSource="{Binding Items}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+    <ListBox x:Name="lbItems" ItemsSource="{Binding Items}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" SelectionMode="Extended"
+             SelectedItem="{Binding SelectedItem}" PreviewKeyDown="ItemDisplayPreviewKeyDown">
+        <ListBox.ItemContainerStyle>
+            <Style TargetType="ListBoxItem">
+                <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />
+            </Style>
+        </ListBox.ItemContainerStyle>
         <ListBox.ItemTemplate>
             <DataTemplate DataType="{x:Type vm:ItemViewModel}">
                 <DockPanel>
