--- a/File.Manager/File.Manager/Windows/MainWindow.xaml
+++ b/File.Manager/File.Manager/Windows/MainWindow.xaml
@@ -19,7 +19,25 @@
         <f:Ribbon DockPanel.Dock="Top">
 
         </f:Ribbon>
-        
+
+        <Grid DockPanel.Dock="Bottom">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+            </Grid.ColumnDefinitions>
+
+            <Button Grid.Column="0" Margin="{StaticResource DialogItemsMargin}">F3 View</Button>
+            <Button Grid.Column="1" Margin="{StaticResource DialogItemsExceptLeftMargin}">F4 Edit</Button>
+            <Button Grid.Column="2" Margin="{StaticResource DialogItemsExceptLeftMargin}">F5 Copy</Button>
+            <Button Grid.Column="3" Margin="{StaticResource DialogItemsExceptLeftMargin}">F6 Move</Button>
+            <Button Grid.Column="4" Margin="{StaticResource DialogItemsExceptLeftMargin}">F7 New folder</Button>
+            <Button Grid.Column="5" Margin="{StaticResource DialogItemsExceptLeftMargin}">F8 Delete</Button>
+        </Grid>
+
         <Grid Focusable="False">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*" />
@@ -31,6 +49,6 @@
             <GridSplitter Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Focusable="False" />
             <c:Pane Grid.Column="2" DataContext="{Binding RightPane}" Focusable="False"/>
         </Grid>
-
+        
     </DockPanel>
 </f:RibbonWindow>
