Added pane switching, changed way selection works. Still unresolved keeping focus on items.

--- a/File.Manager/File.Manager/Theme/ColorsDark.xaml
+++ b/File.Manager/File.Manager/Theme/ColorsDark.xaml
@@ -4,5 +4,6 @@
     <!-- General -->
 
     <SolidColorBrush x:Key="LinkBrush">#1080e0</SolidColorBrush>
+    <SolidColorBrush x:Key="SelectedItemForegroundBrush">#e02020</SolidColorBrush>
 
 </ResourceDictionary>
