--- a/File.Manager/File.Manager/Controls/Pane.xaml
+++ b/File.Manager/File.Manager/Controls/Pane.xaml
@@ -8,7 +8,8 @@
              xmlns:res="clr-namespace:File.Manager.Resources.Controls.Pane;assembly=File.Manager.Resources"
              d:DataContext="{d:DesignInstance Type=vm:PaneViewModel}"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" GotFocus="HandlePaneGotFocus" LostFocus="HandlePaneLostFocus">
+             d:DesignHeight="450" d:DesignWidth="800" GotFocus="HandlePaneGotFocus" LostFocus="HandlePaneLostFocus"
+             PreviewKeyDown="HandlePanePreviewKeyDown">
     <UserControl.Resources>
         <DataTemplate x:Key="NameColumnTemplate" DataType="{x:Type vm:ItemViewModel}">
             <DockPanel>
@@ -16,13 +17,21 @@
                 <TextBlock Margin="{StaticResource DialogItemsExceptLeftMargin}" Text="{Binding Name, Mode=OneWay}" />
             </DockPanel>
         </DataTemplate>
+
+        <CollectionViewSource x:Key="cvsItems" Source="{Binding Items}" />
     </UserControl.Resources>
     <DockPanel>
-        <ListView x:Name="lbItems" ItemsSource="{Binding Items}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" SelectionMode="Extended"
-             SelectedItem="{Binding SelectedItem}" PreviewKeyDown="ItemDisplayPreviewKeyDown" MouseDoubleClick="HandleListViewMouseDoubleClick">
+        <ListView x:Name="lbItems" ItemsSource="{Binding Source={StaticResource cvsItems}}" SelectedItem="{Binding SelectedItem}" 
+                  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" SelectionMode="Single" PreviewKeyDown="ItemDisplayPreviewKeyDown" 
+                  MouseDoubleClick="HandleListViewMouseDoubleClick" IsSynchronizedWithCurrentItem="True" SelectionChanged="HandleListViewItemSelectionChanged"
+                  GotFocus="HandleListViewGotFocus">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListBoxItem">
-                    <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding IsSelected}" Value="True">
+                            <Setter Property="TextBlock.Foreground" Value="{StaticResource SelectedItemForegroundBrush}" />
+                        </DataTrigger>
+                    </Style.Triggers>
                 </Style>
             </ListView.ItemContainerStyle>
             <ListView.View>
