--- a/File.Manager/File.Manager/Windows/MainWindow.xaml
+++ b/File.Manager/File.Manager/Windows/MainWindow.xaml
@@ -45,9 +45,9 @@
                 <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
 
-            <c:Pane Grid.Column="0" DataContext="{Binding LeftPane}" Focusable="False"/>
+            <c:Pane x:Name="pLeft" Grid.Column="0" DataContext="{Binding LeftPane}" Focusable="False"/>
             <GridSplitter Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Focusable="False" />
-            <c:Pane Grid.Column="2" DataContext="{Binding RightPane}" Focusable="False"/>
+            <c:Pane x:Name="pRight" Grid.Column="2" DataContext="{Binding RightPane}" Focusable="False"/>
         </Grid>
         
     </DockPanel>
