--- a/File.Manager/File.Manager/Windows/MainWindow.xaml
+++ b/File.Manager/File.Manager/Windows/MainWindow.xaml
@@ -6,8 +6,7 @@
                 xmlns:local="clr-namespace:File.Manager" 
                 xmlns:res="clr-namespace:File.Manager.Resources.Windows.MainWindow;assembly=File.Manager.Resources"
                 xmlns:f="urn:fluent-ribbon"
-                xmlns:c="clr-namespace:File.Manager.Controls.Files" 
-                xmlns:main="clr-namespace:File.Manager.BusinessLogic.ViewModels.Main;assembly=File.Manager.BusinessLogic" xmlns:c1="clr-namespace:File.Manager.Controls.Files" 
+                xmlns:main="clr-namespace:File.Manager.BusinessLogic.ViewModels.Main;assembly=File.Manager.BusinessLogic" xmlns:c1="clr-namespace:File.Manager.Controls.Files" xmlns:c="clr-namespace:File.Manager.Controls"
                 d:DataContext="{d:DesignInstance Type=main:MainWindowViewModel}"
                 mc:Ignorable="d"
                 Title="{x:Static res:Strings.Window_Title}" Height="450" Width="800" x:Name="root">
@@ -40,34 +39,15 @@
             <Button Grid.Column="5" Margin="{StaticResource DialogItemsExceptLeftMargin}">F8 Delete</Button>
         </Grid>
 
-        <Grid></Grid>
-
         <Grid Focusable="False">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="6" />
                 <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
 
-            <c:FileList Grid.Column="0" x:Name="flLeftList" SnapsToDevicePixels="True" />
-            <c:FileList Grid.Column="2" x:Name="flRightList" SnapsToDevicePixels="True" />
+            <c:Pane x:Name="pLeft" Grid.Column="0" DataContext="{Binding LeftPane}" Focusable="False" Margin="{StaticResource DialogItemsMargin}"/>
+            <c:Pane x:Name="pRight" Grid.Column="1" DataContext="{Binding RightPane}" Focusable="False" Margin="{StaticResource DialogItemsMargin}"/>
         </Grid>
-
-        <!--
-        
-        <Grid Focusable="False">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="6" />
-                <ColumnDefinition Width="1*" />
-            </Grid.ColumnDefinitions>
-
-            <c:Pane x:Name="pLeft" Grid.Column="0" DataContext="{Binding LeftPane}" Focusable="False"/>
-            <GridSplitter Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Focusable="False" />
-            <c:Pane x:Name="pRight" Grid.Column="2" DataContext="{Binding RightPane}" Focusable="False"/>
-        </Grid>
-        
-        -->
         
     </DockPanel>
 </f:RibbonWindow>
