--- a/File.Manager/File.Manager/Windows/MainWindow.xaml
+++ b/File.Manager/File.Manager/Windows/MainWindow.xaml
@@ -39,14 +39,14 @@
             <Button Grid.Column="5" Margin="{StaticResource DialogItemsExceptLeftMargin}">F8 Delete</Button>
         </Grid>
 
-        <Grid Focusable="False">
+        <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*" />
                 <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
 
-            <c:Pane x:Name="pLeft" Grid.Column="0" DataContext="{Binding LeftPane}" Focusable="False" Margin="{StaticResource DialogItemsMargin}"/>
-            <c:Pane x:Name="pRight" Grid.Column="1" DataContext="{Binding RightPane}" Focusable="False" Margin="{StaticResource DialogItemsMargin}"/>
+            <c:Pane x:Name="pLeft" Grid.Column="0" DataContext="{Binding LeftPane}" Margin="{StaticResource DialogItemsMargin}" GotFocus="paneGotFocus"/>
+            <c:Pane x:Name="pRight" Grid.Column="1" DataContext="{Binding RightPane}" Margin="{StaticResource DialogItemsMargin}" GotFocus="paneGotFocus"/>
         </Grid>
         
     </DockPanel>
