--- a/File.Manager/File.Manager/Windows/MainWindow.xaml
+++ b/File.Manager/File.Manager/Windows/MainWindow.xaml
@@ -12,7 +12,8 @@
                 Title="{x:Static res:Strings.Window_Title}" Height="450" Width="800" x:Name="root">
 
     <f:RibbonWindow.InputBindings>
-        <KeyBinding Key="U" Modifiers="Ctrl" Command="{Binding ElementName=root, Path=SwitchPanesCommand}" />
+        <KeyBinding Key="U" Modifiers="Ctrl" Command="{Binding Path=SwitchPanesCommand}" />
+        <KeyBinding Key="F5" Command="{Binding CopyCommand}" />
     </f:RibbonWindow.InputBindings>
 
     <DockPanel>
@@ -33,7 +34,7 @@
 
             <Button Grid.Column="0" Margin="{StaticResource DialogItemsMargin}">F3 View</Button>
             <Button Grid.Column="1" Margin="{StaticResource DialogItemsExceptLeftMargin}">F4 Edit</Button>
-            <Button Grid.Column="2" Margin="{StaticResource DialogItemsExceptLeftMargin}">F5 Copy</Button>
+            <Button Grid.Column="2" Margin="{StaticResource DialogItemsExceptLeftMargin}" Command="{Binding CopyCommand}">F5 Copy</Button>
             <Button Grid.Column="3" Margin="{StaticResource DialogItemsExceptLeftMargin}">F6 Move</Button>
             <Button Grid.Column="4" Margin="{StaticResource DialogItemsExceptLeftMargin}">F7 New folder</Button>
             <Button Grid.Column="5" Margin="{StaticResource DialogItemsExceptLeftMargin}">F8 Delete</Button>
