--- a/File.Manager/File.Manager/Theme/Styles.xaml
+++ b/File.Manager/File.Manager/Theme/Styles.xaml
@@ -9,4 +9,22 @@
         <Setter Property="Width" Value="150" />
         <Setter Property="Margin" Value="{StaticResource DialogItemsExceptLeftMargin}" />
     </Style>
+
+    <Style x:Key="FirstHeaderLabel" TargetType="Label">
+        <Setter Property="Margin" Value="{StaticResource DialogItemsMargin}" />
+    </Style>
+
+    <Style x:Key="NextHeaderLabel" TargetType="Label">
+        <Setter Property="Margin" Value="{StaticResource DialogItemsExceptTopMargin}" />
+    </Style>
+
+    <Style x:Key="FirstValueLabel" TargetType="Label">
+        <Setter Property="Margin" Value="{StaticResource DialogItemsMargin}" />
+        <Setter Property="FontWeight" Value="Bold" />
+    </Style>
+
+    <Style x:Key="NextValueLabel" TargetType="Label">
+        <Setter Property="Margin" Value="{StaticResource DialogItemsExceptTopMargin}" />
+        <Setter Property="FontWeight" Value="Bold" />
+    </Style>
 </ResourceDictionary>
